[package]
name = "async-weighted-semaphore"
version = "0.1.0"
authors = ["Nathan Dobson <nadobson@mac.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.7.3"
async-std = "1.6.3"
futures-test = "0.3.5"
threadpool = "1.8.1"
rand_xorshift = "0.2.0"
lazy_static = "1.4.0"

[dev-dependencies.futures]
version = "0.3.5"
features = ["thread-pool"]
