[package]
name = "async-weighted-semaphore"
version = "0.1.1"
authors = ["Nathan Dobson <nadobson@mac.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An async weighted semaphore."
repository = "https://github.com/nathdobson/async-weighted-semaphore"
readme = "README.md"
keywords = ["async", "asynchronous", "semaphore"]
categories = ["asynchronous", "concurrency"]
exclude = [
    "**/.DS_Store",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.7.3"
async-std = "1.6.3"
futures-test = "0.3.5"
threadpool = "1.8.1"
rand_xorshift = "0.2.0"
async-channel = "1.4.2"
version-sync = "0.9"
lazy_static = "1.4.0"
tokio = { version = "0.2", features = ["full"] }
futures-locks = "0.6.0"
tokio-test = "0.2"

[dev-dependencies.futures]
version = "0.3.5"
features = ["thread-pool"]
